<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.starhorizon.prototype1.ThirdPageActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_page_timer_text_view"
        android:id="@+id/textView2"
        android:layout_centerVertical="true"
        android:height="100dp"
        android:textSize="50sp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_page_message_text_view_1"
        android:id="@+id/textView1"
        android:layout_above="@+id/textView2"
        android:layout_marginBottom="80dp"
        android:height="50dp"
        android:textSize="20sp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_page_message_text_view_3"
        android:id="@+id/textView3"
        android:height="50dp"
        android:textSize="20sp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="80dp"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
